--- a/index.html
+++ b/index.html
@@ -16,42 +16,31 @@
   <link href="https://fonts.googleapis.com/css?family=Exo+2&display=swap" rel="stylesheet">
   <!-- <link rel="stylesheet" href="assets/style/reset.css"> -->
   <link rel="stylesheet" href="assets/style/style.css">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+
 </head>
 
 <body>
 
-<header>
-  <h1>Trivia <span>Game</span></h1> 
-</header>
+  <div class="jumbotron jumbotron-fluid">
+      <h1>Tennis Trivia</h1>
+      <p>Press the start button to begin the game!</p>
+      <button id="start">START</button>
+  </div>
 
-<section>
+  <div class="container">
 
-<div id="time-left"></div>
-
-
-<div class="questions"></div>
-
+    <div id="time-left"></div>
 
 
+    <!-- <div id="response"></div> -->
 
 
 
-</section>
 
-
-  <!-- Optional JavaScript -->
-  <script src="./assets/javascript/app.js"></script>
-
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-  </script>
+  </div>
+<script src="assets/javascript/app.js"></script>
 </body>
 
 </html>
