changed question format, added new variables, setTimer , timeleft function, correct or incorrect, checkAnswers(), changed html around

--- a/index.html
+++ b/index.html
@@ -22,25 +22,28 @@
 </head>
 
 <body>
+  <div class="container"></div>
+  <!-- <div class="jumbotron jumbotron-fluid"> -->
+  <h1>Tennis Trivia</h1>
+  <!-- <p>Press the start button to begin the game!</p> -->
+  <button id="start">START</button>
+  <!-- </div> -->
+  <div id="time-left"></div>
+  <div id="questions"></div>
+<div id="answerOptions"></div>
 
-  <div class="jumbotron jumbotron-fluid">
-      <h1>Tennis Trivia</h1>
-      <p>Press the start button to begin the game!</p>
-      <button id="start">START</button>
+  <!-- <div id="response"></div> -->
+  <div id="score"></div>
+
+  <button id="submit">Submit</button>
+  <div id="reset"></div>
+ 
+
+
+
+
   </div>
-
-  <div class="container">
-
-    <div id="time-left"></div>
-
-
-    <!-- <div id="response"></div> -->
-
-
-
-
-  </div>
-<script src="assets/javascript/app.js"></script>
+  <script src="assets/javascript/app.js"></script>
 </body>
 
 </html>
