created a README, took away the submit button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-- <div id="response"></div> -->
   <div id="score"></div>
 
-  <button id="submit">Submit</button>
+  <!-- <button id="submit">Submit</button> -->
   <div id="reset"></div>
  
 
