--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+<!--JQuery-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -16,33 +19,25 @@
   <link href="https://fonts.googleapis.com/css?family=Exo+2&display=swap" rel="stylesheet">
   <!-- <link rel="stylesheet" href="assets/style/reset.css"> -->
   <link rel="stylesheet" href="assets/style/style.css">
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-
 </head>
 
 <body>
-  <div class="container"></div>
-  <!-- <div class="jumbotron jumbotron-fluid"> -->
   <h1>Tennis Trivia</h1>
-  <!-- <p>Press the start button to begin the game!</p> -->
-  <button id="start">START</button>
-  <!-- </div> -->
-  <div id="time-left"></div>
-  <div id="questions"></div>
-<div id="answerOptions"></div>
 
-  <!-- <div id="response"></div> -->
-  <div id="score"></div>
-
-  <!-- <button id="submit">Submit</button> -->
-  <div id="reset"></div>
- 
-
-
-
-
+  <div class="triviaContainer">
+    <!-- <button id="start">START</button> -->
+    <div class="trivia"></div>
   </div>
+
+  <button id="next">Next Question</button>
+  <button id="submit">Submit</button>
+
+  <div id="time-left"></div>
+<div id="results"></div>
+  <div id="reset"></div>
+
+
+
   <script src="assets/javascript/app.js"></script>
 </body>
 
