changed question h4 to div, created input radio for answer options

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="container">
 
     <h6 id="time-left"></h6>
-    <h4 id="question"></h4>
+    <div id="question"></div>
     <div id="answers"></div>
     <button id="start-button">Start!</button>
 
