turned correct answers into strings, created if else statements with indexQandA with resetGame()

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <h6 id="time-left"></h6>
     <div id="question"></div>
     <div id="answers"></div>
+    <button id="submit">Submit</button>
     <button id="start-button">Start!</button>
 
 
